Tue Jun 13 12:56:36 2000  Carlos O'Ryan  <coryan@uci.edu>

	* */Makefile:
	  Updated dependencies.

Tue Jun 13 09:47:25 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/msvc_auto_compile.pl:

          Fixed some typos related to the static build core.

Mon Jun 12 20:45:18 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/Process_Win32.pm:

          Changed the $newwindow check to check to see if the variable
          was defined before comparing it to "yes".  This removes a
          perl warning.

        * bin/msvc_auto_compile.pl:

          The TAOACE[_static].dsw files were changed, so I altered the
          CORE option to use the TAOACE.dsw file with -DLL, and added
          some missing dsp files for the -LIB build.

        * bin/create_vt_dsps.pl:

          Changed the runtime library type used in the static versions
          and added ACE_OS_HAS_DLL=0.

        * ace/ace_lib.dsp:
        * apps/gperf/src/gperf.dsp:
        * apps/gperf/src/gperf_lib.dsp:
        * examples/IPC_SAP/ATM_SAP/CPP_client.dsp:
        * examples/IPC_SAP/ATM_SAP/CPP_server.dsp:

          Miscellaneous fixes to get the static versions working again.
          Mainly just adding ACE_OS_HAS_DLL=0.

        * tests/version_tests/CDR_Array_Test.dsp: (added)
        * tests/version_tests/Atomic_Op_Test.dsp:
        * tests/version_tests/Auto_IncDec_Test.dsp:
        * tests/version_tests/Barrier_Test.dsp:
        * tests/version_tests/Basic_Types_Test.dsp:
        * tests/version_tests/Buffer_Stream_Test.dsp:
        * tests/version_tests/CDR_File_Test.dsp:
        * tests/version_tests/CDR_Test.dsp:
        * tests/version_tests/Cache_Map_Manager_Test.dsp:
        * tests/version_tests/Cached_Accept_Conn_Test.dsp:
        * tests/version_tests/Cached_Conn_Test.dsp:
        * tests/version_tests/Capabilities_Test.dsp:
        * tests/version_tests/Collection_Test.dsp:
        * tests/version_tests/Conn_Test.dsp:
        * tests/version_tests/DLL_Test.dsp: