@@ -1,3 +1,12 @@
+Tue Jun 13 15:51:33 2000  Jerry D. De Master <jdemaste@rite-solutions.com>
+
+	* netsvcs/lib/Logging_Strategy: Enhanced the Logging Strategy so
+	  it can be used to limit log file size at any logging point
+ 	  (i.e., application, client logging daemon, or server logging
+ 	  daemon) by specifying the -i <sample_interval_in_secs> and -m
+ 	  <max_size_in_KB> options for the Logging_Strategy class in a
+ 	  svc.conf file.
+
 Tue Jun 13 12:56:36 2000  Carlos O'Ryan  <coryan@uci.edu>
 
 	* */Makefile:
